--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ notifications:
     recipients:
       - test_ci2@yahoo.in
       - varsha@shippable.com
-    on_success: always
+    on_success: change
     on_failure: always
   irc:
     pull_requests: true
